--- a/image_finder/src/index.html
+++ b/image_finder/src/index.html
@@ -26,7 +26,7 @@
           placeholder="Search images..."
         />
       </div>
-      <button type="submit" class="btn btn-primary mb-2">Искать</button>
+      <button type="submit" class="btn btn-primary mb-2">Search</button>
     </form>
 
     <ul class="gallery"></ul>
